--- a/book/bsp_parsons_problem.ipynb
+++ b/book/bsp_parsons_problem.ipynb
@@ -45,9 +45,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cool, das klappt. Allerdings nicht die in der Anleitung vorgeschlagene Variante mit heroku... \n",
+    "Das klappt, **aber leider nur lokal und nicht die in der Anleitung vorgeschlagene Variante mit heroku...** \n",
     "\n",
-    "## Nun nochmal das selbe Beispiel, aber ich versuche den Input auszublenden."
+    "## Selbes Beispiel, aber mit ausgeblendeter Code-Zelle\n",
+    "Dazu habe ich das Zellen-Tag `remove-input` hinzugefügt."
    ]
   },
   {
@@ -85,6 +86,46 @@
    "source": [
     "from IPython.display import IFrame\n",
     "IFrame('http://parsons.problemsolving.io/puzzle/cbb39952d55a4be38f935c573a065f9f', width=1000, height=500)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Versuch mit einer lokalen Datei"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"1000\"\n",
+       "            height=\"500\"\n",
+       "            src=\"parsonsproblems/parsons1find_max.html?sandbox=allow-same-origin\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x114389210>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import IFrame\n",
+    "IFrame('parsonsproblems/parsons1find_max.html', width=1000, height=500, sandbox=\"allow-same-origin\")"
    ]
   },
   {
