--- a/book/p5einbinden.ipynb
+++ b/book/p5einbinden.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Lokalen Sketch als Iframe einbinden. Funktioniert auf lokalem Webserver. Aber auch aug github?\n",
+    "### Lokalen Sketch als Iframe einbinden. Funktioniert auf lokalem Webserver. Aber auch auf github?\n",
     "<iframe style=\"width: 400px; height: 450px; overflow: hidden;\"  scrolling=\"no\" frameborder=\"0\" src=\"sketches/nn_feste_breite/index.html\"></iframe>"
    ]
   },
@@ -19,7 +19,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### \n",
+    "### Und dasselbe nochmal aus dem Code heraus mit `Ipython.display.Iframe`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"1000\"\n",
+       "            height=\"500\"\n",
+       "            src=\"sketches/nn_feste_breite/index.html?sandbox=allow-same-origin\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x11a89d7d0>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Und dasselbe nochmal aber aus dem Code heraus:\n",
+    "from IPython.display import IFrame\n",
+    "IFrame('sketches/nn_feste_breite/index.html', width=1000, height=500, sandbox=\"allow-same-origin\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Was immer gehen sollte: den p5-Editor von `p5js.org` einbinde\n",
     "<iframe style=\"width: 400px; height: 450px; overflow: hidden;\"  scrolling=\"no\" frameborder=\"0\" src=\"https://editor.p5js.org/micbre/full/EFeYIccs_\"></iframe>"
    ]
   }
