Parsons allgemein über URL param

--- a/book/bsp_parsons_problem.ipynb
+++ b/book/bsp_parsons_problem.ipynb
@@ -129,6 +129,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lokale Datei mit GET-Parameter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ZGVmIGZpbmRfbWF4KGEsIGIsIGMpOgogICAgaWYgYSA+PSBiIGFuZCBhID49IGM6CiAgICAgICAgcmV0dXJuIGEKICAgIGVsaWYgYiA+PSBhIGFuZCBiID49IGM6CiAgICAgICAgcmV0dXJuIGIKICAgIGVsc2U6CiAgICAgICAgcmV0dXJuIGMKCnByaW50KGZpbmRfbWF4KDEsIDIsIDMpKQ\n",
+      "ZGVmIGZpbmRfbWF4KGEsIGIsIGMpOgogICAgaWYgYSA%2BPSBiIGFuZCBhID49IGM6CiAgICAgICAgcmV0dXJuIGEKICAgIGVsaWYgYiA%2BPSBhIGFuZCBiID49IGM6CiAgICAgICAgcmV0dXJuIGIKICAgIGVsc2U6CiAgICAgICAgcmV0dXJuIGMKCnByaW50KGZpbmRfbWF4KDEsIDIsIDMpKQ\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"1000\"\n",
+       "            height=\"500\"\n",
+       "            src=\"parsonsproblems/parsons2allgemein.html?problem=ZGVmIGZpbmRfbWF4KGEsIGIsIGMpOgogICAgaWYgYSA%252BPSBiIGFuZCBhID49IGM6CiAgICAgICAgcmV0dXJuIGEKICAgIGVsaWYgYiA%252BPSBhIGFuZCBiID49IGM6CiAgICAgICAgcmV0dXJuIGIKICAgIGVsc2U6CiAgICAgICAgcmV0dXJuIGMKCnByaW50KGZpbmRfbWF4KDEsIDIsIDMpKQ\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x117bc7a10>"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import IFrame\n",
+    "import base64\n",
+    "problem_str = \"def find_max(a, b, c):\\n    if a >= b and a >= c:\\n        return a\\n    elif b >= a and b >= c:\\n        return b\\n    else:\\n        return c\\n\\nprint(find_max(1, 2, 3))\"\n",
+    "# problem_str = \"x = 1\\ny = 2\"\n",
+    "\n",
+    "# encoded_problem = base64.b64encode(problem_str.encode(\"latin-1\")).decode(\"latin-1\")\n",
+    "# encoded_problem = base64.b64encode(problem_str.encode(\"utf-8\")).decode(\"latin-1\")\n",
+    "encoded_problem = base64.b64encode(bytes(problem_str, 'utf-8')).decode('latin-1')\n",
+    "encoded_problem = base64.b64encode(bytes(problem_str, 'utf-8')).decode('utf-8')\n",
+    "\n",
+    "# remove padding\n",
+    "encoded_problem = encoded_problem.rstrip(\"=\")\n",
+    "\n",
+    "print(encoded_problem)\n",
+    "\n",
+    "# safe_string = encoded_problem\n",
+    "\n",
+    "# import urllib.parse\n",
+    "safe_string = urllib.parse.quote_plus(encoded_problem)\n",
+    "\n",
+    "print(safe_string)\n",
+    "url_str = f\"parsonsproblems/parsons2allgemein.html\"\n",
+    "\n",
+    "IFrame(url_str, width=1000, height=500, problem=safe_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
