--- a/book/p5einbinden.ipynb
+++ b/book/p5einbinden.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Lokalen Sketch als Iframe einbinden. Funktioniert auf lokalem Webserver. Aber auch auf github?\n",
+    "### Lokalen Sketch als Iframe einbinden. Funktioniert auf lokalem Webserver. Aber auch auf github? Ja!\n",
     "<iframe style=\"width: 400px; height: 450px; overflow: hidden;\"  scrolling=\"no\" frameborder=\"0\" src=\"sketches/nn_feste_breite/index.html\"></iframe>"
    ]
   },
