--- a/book/bsp_parsons_problem.ipynb
+++ b/book/bsp_parsons_problem.ipynb
@@ -137,15 +137,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ZGVmIGZpbmRfbWF4KGEsIGIsIGMpOgogICAgaWYgYSA+PSBiIGFuZCBhID49IGM6CiAgICAgICAgcmV0dXJuIGEKICAgIGVsaWYgYiA+PSBhIGFuZCBiID49IGM6CiAgICAgICAgcmV0dXJuIGIKICAgIGVsc2U6CiAgICAgICAgcmV0dXJuIGMKCnByaW50KGZpbmRfbWF4KDEsIDIsIDMpKQ\n",
-      "ZGVmIGZpbmRfbWF4KGEsIGIsIGMpOgogICAgaWYgYSA%2BPSBiIGFuZCBhID49IGM6CiAgICAgICAgcmV0dXJuIGEKICAgIGVsaWYgYiA%2BPSBhIGFuZCBiID49IGM6CiAgICAgICAgcmV0dXJuIGIKICAgIGVsc2U6CiAgICAgICAgcmV0dXJuIGMKCnByaW50KGZpbmRfbWF4KDEsIDIsIDMpKQ\n"
+      "CnggPSAxCnkgPSAyCg\n",
+      "CnggPSAxCnkgPSAyCg\n"
      ]
     },
     {
@@ -155,7 +155,7 @@
        "        <iframe\n",
        "            width=\"1000\"\n",
        "            height=\"500\"\n",
-       "            src=\"parsonsproblems/parsons2allgemein.html?problem=ZGVmIGZpbmRfbWF4KGEsIGIsIGMpOgogICAgaWYgYSA%252BPSBiIGFuZCBhID49IGM6CiAgICAgICAgcmV0dXJuIGEKICAgIGVsaWYgYiA%252BPSBhIGFuZCBiID49IGM6CiAgICAgICAgcmV0dXJuIGIKICAgIGVsc2U6CiAgICAgICAgcmV0dXJuIGMKCnByaW50KGZpbmRfbWF4KDEsIDIsIDMpKQ\"\n",
+       "            src=\"parsonsproblems/parsons2allgemein.html?problem=CnggPSAxCnkgPSAyCg\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "            \n",
@@ -163,10 +163,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x117bc7a10>"
+       "<IPython.lib.display.IFrame at 0x122167290>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,10 @@
     "from IPython.display import IFrame\n",
     "import base64\n",
     "problem_str = \"def find_max(a, b, c):\\n    if a >= b and a >= c:\\n        return a\\n    elif b >= a and b >= c:\\n        return b\\n    else:\\n        return c\\n\\nprint(find_max(1, 2, 3))\"\n",
-    "# problem_str = \"x = 1\\ny = 2\"\n",
+    "problem_str = \"\"\"\n",
+    "x = 1\n",
+    "y = 2\n",
+    "\"\"\"\n",
     "\n",
     "# encoded_problem = base64.b64encode(problem_str.encode(\"latin-1\")).decode(\"latin-1\")\n",
     "# encoded_problem = base64.b64encode(problem_str.encode(\"utf-8\")).decode(\"latin-1\")\n",
