Parsons allgemein über URL param

--- a/book/bsp_parsons_problem.ipynb
+++ b/book/bsp_parsons_problem.ipynb
@@ -192,7 +192,7 @@
     "\n",
     "# safe_string = encoded_problem\n",
     "\n",
-    "# import urllib.parse\n",
+    "import urllib.parse\n",
     "safe_string = urllib.parse.quote_plus(encoded_problem)\n",
     "\n",
     "print(safe_string)\n",
