--- a/book/p5einbinden.ipynb
+++ b/book/p5einbinden.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# P5JS als iframe einbinden\n"
+    "# P5JS als iframe einbinden\n",
+    "\n",
+    "```{important}\n",
+    "Ich kann mit `p5js` erstellte Animationen an der passenden Stelle direkt ins Notebook einbinden. \n",
+    "Und Mausklicks funktionieren auch. \n",
+    "\n",
+    "Cool!\n",
+    "```\n"
    ]
   },
   {
