--- a/book/bsp_parsons_problem.ipynb
+++ b/book/bsp_parsons_problem.ipynb
@@ -4,56 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ein Parsons-Problem einbinden\n",
-    "Ich folge dabei [dieser Anleitung](https://parsons.problemsolving.io/). Mal sehen, ob das klappt..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"1000\"\n",
-       "            height=\"500\"\n",
-       "            src=\"http://parsons.problemsolving.io/puzzle/cbb39952d55a4be38f935c573a065f9f\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x119f24850>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from IPython.display import IFrame\n",
-    "IFrame('http://parsons.problemsolving.io/puzzle/cbb39952d55a4be38f935c573a065f9f', width=1000, height=500)"
+    "# Ein Parsons-Problem einbinden"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove-input"
+    ]
+   },
    "source": [
-    "Das klappt, **aber leider nur lokal und nicht die in der Anleitung vorgeschlagene Variante mit heroku...** \n",
-    "\n",
-    "## Selbes Beispiel, aber mit ausgeblendeter Code-Zelle\n",
-    "Dazu habe ich das Zellen-Tag `remove-input` hinzugefügt."
+    "Die folgende Codezelle wird nicht angezeigt, sondern nur ihr Ergebnis. Dazu habe ich das Zellen-Tag `remove-input` hinzugefügt."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "tags": [
      "remove-input"
@@ -61,91 +28,11 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"1000\"\n",
-       "            height=\"500\"\n",
-       "            src=\"http://parsons.problemsolving.io/puzzle/cbb39952d55a4be38f935c573a065f9f\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x119775d90>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from IPython.display import IFrame\n",
-    "IFrame('http://parsons.problemsolving.io/puzzle/cbb39952d55a4be38f935c573a065f9f', width=1000, height=500)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Versuch mit einer lokalen Datei"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"1000\"\n",
-       "            height=\"500\"\n",
-       "            src=\"parsonsproblems/parsons1find_max.html?sandbox=allow-same-origin\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x114389210>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from IPython.display import IFrame\n",
-    "IFrame('parsonsproblems/parsons1find_max.html', width=1000, height=500, sandbox=\"allow-same-origin\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Lokale Datei mit GET-Parameter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CnggPSAxCnkgPSAyCg\n",
-      "CnggPSAxCnkgPSAyCg\n"
+      "CnggPSBpbnQoaW5wdXQoIkJpdHRlIGdlYmVuIFNpZSBlaW5lIFphaGwgZWluOiAiKSkKaWYgeCA8IDA6CiAgICBwcmludCgiTmVnYXRpdmUgWmFobCIpCmVsc2U6CiAgICBwcmludCgiTmljaHQtbmVnYXRpdmUgWmFobCIpCg\n",
+      "CnggPSBpbnQoaW5wdXQoIkJpdHRlIGdlYmVuIFNpZSBlaW5lIFphaGwgZWluOiAiKSkKaWYgeCA8IDA6CiAgICBwcmludCgiTmVnYXRpdmUgWmFobCIpCmVsc2U6CiAgICBwcmludCgiTmljaHQtbmVnYXRpdmUgWmFobCIpCg\n"
      ]
     },
     {
@@ -155,7 +42,7 @@
        "        <iframe\n",
        "            width=\"1000\"\n",
        "            height=\"500\"\n",
-       "            src=\"parsonsproblems/parsons2allgemein.html?problem=CnggPSAxCnkgPSAyCg\"\n",
+       "            src=\"parsonsproblems/parsons2allgemein.html?problem=CnggPSBpbnQoaW5wdXQoIkJpdHRlIGdlYmVuIFNpZSBlaW5lIFphaGwgZWluOiAiKSkKaWYgeCA8IDA6CiAgICBwcmludCgiTmVnYXRpdmUgWmFobCIpCmVsc2U6CiAgICBwcmludCgiTmljaHQtbmVnYXRpdmUgWmFobCIpCg\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "            \n",
@@ -163,10 +50,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x122167290>"
+       "<IPython.lib.display.IFrame at 0x107e84890>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,8 +63,11 @@
     "import base64\n",
     "problem_str = \"def find_max(a, b, c):\\n    if a >= b and a >= c:\\n        return a\\n    elif b >= a and b >= c:\\n        return b\\n    else:\\n        return c\\n\\nprint(find_max(1, 2, 3))\"\n",
     "problem_str = \"\"\"\n",
-    "x = 1\n",
-    "y = 2\n",
+    "x = int(input(\"Bitte geben Sie eine Zahl ein: \"))\n",
+    "if x < 0:\n",
+    "    print(\"Negative Zahl\")\n",
+    "else:\n",
+    "    print(\"Nicht-negative Zahl\")\n",
     "\"\"\"\n",
     "\n",
     "# encoded_problem = base64.b64encode(problem_str.encode(\"latin-1\")).decode(\"latin-1\")\n",
