KI Beispiele Problemlösen hinzugefügt

--- a/book/bsp_parsons_problem.ipynb
+++ b/book/bsp_parsons_problem.ipynb
@@ -78,14 +78,14 @@
     "# remove padding\n",
     "encoded_problem = encoded_problem.rstrip(\"=\")\n",
     "\n",
-    "print(encoded_problem)\n",
+    "# print(encoded_problem)\n",
     "\n",
     "# safe_string = encoded_problem\n",
     "\n",
     "import urllib.parse\n",
     "safe_string = urllib.parse.quote_plus(encoded_problem)\n",
     "\n",
-    "print(safe_string)\n",
+    "# print(safe_string)\n",
     "url_str = f\"parsonsproblems/parsons2allgemein.html\"\n",
     "\n",
     "IFrame(url_str, width=1000, height=500, problem=safe_string)"
