KI Beispiele Problemlösen hinzugefügt

--- a/book/bsp_parsons_problem.ipynb
+++ b/book/bsp_parsons_problem.ipynb
@@ -20,21 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "tags": [
      "remove-input"
     ]
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CnggPSBpbnQoaW5wdXQoIkJpdHRlIGdlYmVuIFNpZSBlaW5lIFphaGwgZWluOiAiKSkKaWYgeCA8IDA6CiAgICBwcmludCgiTmVnYXRpdmUgWmFobCIpCmVsc2U6CiAgICBwcmludCgiTmljaHQtbmVnYXRpdmUgWmFobCIpCg\n",
-      "CnggPSBpbnQoaW5wdXQoIkJpdHRlIGdlYmVuIFNpZSBlaW5lIFphaGwgZWluOiAiKSkKaWYgeCA8IDA6CiAgICBwcmludCgiTmVnYXRpdmUgWmFobCIpCmVsc2U6CiAgICBwcmludCgiTmljaHQtbmVnYXRpdmUgWmFobCIpCg\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -50,10 +42,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x107e84890>"
+       "<IPython.lib.display.IFrame at 0x10d65f250>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
