neue Intro-Seite

--- a/book/live_code.ipynb
+++ b/book/live_code.ipynb
@@ -39,6 +39,12 @@
    "metadata": {},
    "source": [
     "## Code mit Pytest überprüfen\n",
+    "\n",
+    "```{tip}\n",
+    "Lösung für das untenstehende Problem [wahrscheinlich hier](https://jupyterbook.org/en/stable/interactive/thebe.html#pre-execute-cells-when-thebe-is-initialized): Pre-execute cells when Thebe is initialized\n",
+    "```\n",
+    "\n",
+    "\n",
     "```{warning}\n",
     "Der unten beschriebene Ansatzt funktioniert leider so noch nicht, weil \n",
     "1. die versteckten Zellen nicht ausgeführt werden\n",
