Referenz auf ein Label ausprobiert

--- a/book/live_code.ipynb
+++ b/book/live_code.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(livecode)=\n",
     "# Programmieren direkt in diesem Buch\n",
     "\n",
     "Auf manchen Seiten in diesem Buch siehst du ganz oben ein 🚀 Raketensymbol. Klicke es an und wähle dann \"Live Code\". Dadurch wird die Seite zu einem Jupyter Notebook, das du direkt im Browser bearbeiten und ausführen kannst - ganz ohn Software zu installieren!\n",
