Makefile angelegt, so dass ich nun leichter von der Konsole arbeiten kann. Insb. make develop ist unglaublich hilfreich!

--- a/book/live_code.ipynb
+++ b/book/live_code.ipynb
@@ -100,7 +100,7 @@
     "    assert addiere(1, 2) == 3, \"Deine Additionsfunktion ist noch nicht korrekt. Probier's nochmal!\"\n",
     "    assert addiere(1.5, 2.5) == 4, \"Deine Additionsfunktion ist noch nicht korrekt. Probier's nochmal!\"\n",
     "\n",
-    "!pip install pytest ipytest\n",
+    "%pip install pytest ipytest   \n",
     "\n",
     "import ipytest\n",
     "ipytest.autoconfig()\n",
