--- a/book/live_code.ipynb
+++ b/book/live_code.ipynb
@@ -26,11 +26,11 @@
     }
    ],
    "source": [
-    "# Führe den Code aus (🚀 ⟶ Live Code ⟶ \"run\"-Button unterhalb dieser Zelle). \n",
-    "# Ändere den Code so, dass \"Hallo Welt\" ausgegeben wird und führe ihn erneut aus.\n",
+    "# Aufgabe 1: Führe den Code aus (🚀 ⟶ Live Code ⟶ \"run\"-Button unterhalb dieser Zelle). \n",
+    "# Aufgabe 2: Ändere den Code so, dass bei der Ausführung\"Hallo Welt\" ausgegeben wird.\n",
     "\n",
-    "murrgh = \"Welt\"\n",
-    "grompf = \"Hallo\"\n",
+    "variable1: str = \"Hallo\"\n",
+    "variable2: str = \"Welt\"\n",
     "\n",
     "print(\"Diese Ausgabe soll verschwinden und durch einen Gruß an die Welt ersetzt werden.\")\n"
    ]
@@ -42,7 +42,7 @@
     "## Code mit Pytest überprüfen\n",
     "\n",
     "```{tip}\n",
-    "Lösung für das untenstehende Problem [wahrscheinlich hier](https://jupyterbook.org/en/stable/interactive/thebe.html#pre-execute-cells-when-thebe-is-initialized): Pre-execute cells when Thebe is initialized\n",
+    "Lösung für das untenstehende Problem [wahrscheinlich hier](https://jupyterbook.org/en/stable/interactive/thebe.html#pre-execute-cells-when-thebe-is-initialized): Beim Initialsieren von `Thebe` kann direkt Code ausgeführt werden - auch versteckter!\n",
     "```\n",
     "\n",
     "\n",
