Übungen verkettete Listen (uvm)

--- a/book/datenstrukturen/verkettete_listenTODO.ipynb
+++ b/book/datenstrukturen/verkettete_listenTODO.ipynb
@@ -13,14 +13,14 @@
    "source": [
     "## Planung UE Verkettete Listen\n",
     "\n",
-    "- Warum Datenstrukturen? \n",
-    "- ??? Spiel: Schülerkette Array vs Liste: Was muss passieren, wenn man eine Person einfügen will in der Mitte, am Ende, am Anfang\n",
-    "- Aufgabe: Warum funktioniert das Einfügen mit diesem (Pseudo-)Code nicht?\n",
+    "SuS-Aktivitäten:\n",
+    "- OD vorgeben -> Mit welchen Aktionen kann man das erzeugen?\n",
+    "- OD zeichnen\n",
+    "- Pseudocode für Operation entfernenVorne oder entfernen(index)\n",
     "\n",
-    "Aufgaben:\n",
-    "- Wie sieht die Liste nach folgendem Befehl aus?\n",
-    "- ...nach mehreren Befehlen (Einfügen und Löschen)?\n",
-    "- Liste als OD zeichnen\n",
+    "\n",
+    "TODO\n",
+    "- make deploy: per scp oder besser per rsync (s. chatgpt)\n",
     "- "
    ]
   },
